src/test/deca/syntax/parser/invalid/instance_of_string.deca
// Parser test, instanceof should be followed by an IDENT not a string

{
    x instanceof "string";
}